# `kglab` changelog

## 0.3.1

2021-04-??

  * add multifile support for `load_jsonld()`; kudos @Ankush-Chander
  * warning about NumPy/TensorFlow version conflicts; kudos @CatChenal
  * roll back NumPy requirement to >= 1.19.2
  * documenting notes about how to handle "PEP 517" errors


## 0.3.0

2021-04-23

  * add conda `environment.yml` plus instructions
  * use `bandit` to check for security issues
  * add `pre-commit` hooks
  * add `lgtm` code reviews (slow, not integrating into GitHub PRs directly)
  * add use of `pipdeptree` to analyze dependencies
  * refactor docs to use Divio design patterns; kudos @louisguitton
  * created `SECURITY.md` security policy
  * using Snyk for security audits of dependencies (it has some troubles)
  * testing/correcting the PSL examples; kudos @louisguitton
  * include first user quote; kudos @kaaloo !!
  * multifile decorator (supports globs) for `load_rdf()`; kudos @Ankush-Chander
  * fixed bug in SubgraphTensor null check; kudos @dvsrepo
  * prep for pytorch_geometric integration; kudos @dvsrepo
  * add `as_tensor()` support for PyTorch


## 0.2.1

2021-03-12

  * tutorial proofreading and corrections; kudos @louisguitton
  * better exception handling for RDF construction, parsing, serialization
  * `build_nx_graph()` now requires a `networkx.DiGraph` directed graph as an argument
  * add DOI to README, CITATION, and docs
  * add contributor instructions
  * neo4j integration via `neosemantics`; kudos @gauravjaglan
  * replace `GPUtil` with `pynvml` as recommended by NVidia; kudos @kingmesal
  * option to enable NVidia GPU use, if devices are available and libraries are installed
  * using `cuDF`/`cuGraph` in lieu of `pandas`/`networkx` where possible; kudos @BradReesWork


## 0.2.0

2021-02-07

  * project milestone release
  * begin integration of `csvwlib`


## 0.1.8

2021-01-31

  * hotfix: backing out the `igraph` dependency; too many installation issues with it